# cpp-sandbox

./: CMakeLists.txt  CMakePresets.json  conanfile.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tools/: generate_code_coverage.sh  install_dependencies.sh
